update v21 and v22